--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
   "name": "4lexvav/module-indexer",
-  "description": "Module provides CLI command for individual product indexation",
+  "description": "Module provides CLI command for partial product indexation",
   "require": {
     "magento/framework": "100.0.*|100.1.*|101.0.*|102.0.*"
   },
